--- a/venedor-boot.html
+++ b/venedor-boot.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=IBM+Plex+Sans+Arabic:wght@400&family=Open+Sans&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/venedorstyle.css">
@@ -13,8 +16,8 @@
 <body>
     <header class="header" id="header">
         <section class="container-fluid top-header">
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row justify-content-center">
+                <div class="col-md-3">
                     <nav class="top-nav">
                         <ul class="nav header-nav-bar justify-content-around">
                             <li class="nav-item header-nav-item"><a class="top-nav-link" href="#link"><svg class="icon icon-edit img-fluid"><use xlink:href="#icon-edit"></use></svg>my wishlist</a></li>
@@ -24,8 +27,8 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-md-6 d-flex flex-row-reverse">
-                    <p class="top-nav-login">welcome to <span class="top-nav-venedor">venedor</span>!<a class="login-link" href="#link"> login</a> or <a href="#link" class="top-nav-account">create an account</a></p>
+                <div class="col-md-4 d-flex flex-row-reverse">
+                    <p class="top-nav-login">Welcome to <span class="top-nav-venedor">Venedor</span>!<a class="login-link" href="#link"> login</a> or <a href="#link" class="top-nav-account">create an account</a></p>
                 </div>
             </div>
         </section>
@@ -74,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <section class="container-fluid main-sub-header">
+        <section class="container main-sub-header">
             <div class="row">
                 <div class="col-md-8">
                     <nav class="main-nav-bar">
@@ -101,7 +104,7 @@
         </section>
     </header>
     <main class="main" id="main">
-        <div class="container carousel-content">
+        <div class="container-fluid carousel-content">
             <!-- go through carousel and try to adjust images in carousel so they all match to prevent jumps in sizing -->
             <div class="row justify-content-center">
                 <div class="col-md-6">
@@ -144,7 +147,7 @@
         <section class="container manufacturer-content">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="on-sale-banner">latest</h2>
+                    <h2 class="subtitle">latest</h2>
                     <p class="sales-text">Only with us you can get a new model with a discount.</p>
                 </div>
             </div>
@@ -158,7 +161,7 @@
         <section class="container welcome-banner">
             <div class="row">
                 <div class="col-md-6">
-                    <h3 class="welcome-sub-header">welcome to venedor</h3>
+                    <h2 class="subtitle">welcome to venedor</h2>
                     <p class="welcome-text">Venedor is a fully responsive Magento theme with advanced admin module. Based on Bootstrap’s 12 column 1200px responsive grid Theme. Great looks on desktops, tablets and mobiles.Venedor is extremely customizable, easy to use and fully responsive. Suitable for every type of store. Great as a starting point for your custom projects. </p>
                     <p class="welcome-text">This theme includes several extensions including ajax price slider that will help you improve your sales. We supply a full help with our products and after purchase support to all our customers. Buy Venedor Theme!</p>
                 </div>
@@ -170,8 +173,8 @@
         <section class="container manufacturer-content">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="on-sale-banner">on sale</h2>
-                    <p class="on-sale-text">only with us can you get a new model with a discount</p>
+                    <h2 class="subtitle">on sale</h2>
+                    <p class="on-sale-text">Only with us can you get a new model with a discount.</p>
                 </div>
             </div>
             <div class="row justify-content-around">
@@ -182,7 +185,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="manufacturer-title">manufacturers</h2>
+                    <h2 class="subtitle">manufacturers</h2>
                 </div>
             </div>
             <div class="row justify-content-around">
@@ -196,96 +199,85 @@
         </section>
     </main>
     <footer class="footer" id="footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6">
+        <section class="container-fluid footer-content">
+            <div class="row sign-up-section">
+                <div class="col-md-6 random-text">
                     <p class="random-text">sign up to receive the latest fashion news</p>
                 </div>
-                <div class="col-md-6">
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <div class="col-md-4">
+                    <div class="input-group mb-3 sign-up-box">
+                        <input type="text" class="form-control" placeholder="Enter your email address" aria-label="Enter your email address" aria-describedby="basic-addon2">
                         <div class="input-group-append">
                         <span class="input-group-text" id="basic-addon2">sign up</span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-3">
+            <div class="row bottom-section justify-content-center">
+                <div class="col-md-2">
                     <div class="footer-list" id="list1">
                         <h3 class="sub-header" id="my-account">my account</h3>
                         <ul class="listed-info">
-                            <li><a href="#link">My account</a></li>
-                            <li><a href="#link">Personal information</a></li>
-                            <li><a href="#link">Addresses</a></li>
-                            <li><a href="#link">Discount</a></li>
-                            <li><a href="#link">Order History</a></li>
-                            <li><a href="#link">Your vouchers</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">My account</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">Personal information</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">Addresses</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">Discount</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">Order History</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">Your vouchers</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <div class="footer-list" id="list2">
                         <h3 class="sub-header" id="my-account">information</h3>
                         <ul class="listed-info">
-                            <li><a href="#link">New products</a></li>
-                            <li><a href="#link">Top sellers</a></li>
-                            <li><a href="#link">Specials</a></li>
-                            <li><a href="#link">Manufacturers</a></li>
-                            <li><a href="#link">Suppliers</a></li>
-                            <li><a href="#link">Our stores</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">New products</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">Top sellers</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">Specials</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">Manufacturers</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">Suppliers</a></li>
+                            <li class="listed-info-item"><a href="#link" class="listed-info-link">Our stores</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <div class="footer-list" id="list3">
                         <h3 class="sub-header" id="my-account">my account</h3>
                         <p class="my-account-details">it's none of your business</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-1">
                     <div class="footer-list" id="list4">
-                        <h3 class="sub-header" id="my-account">my account</h3>
-                        <ul class="listed-info">
-                            <li>fill</li>
-                            <li>fill</li>
-                            <li>fill</li>
-                            <li>fill</li>
-                            <li>fill</li>
-                            <li>fill</li>
-                        </ul>
+                        <h3 class="sub-header" id="nonsense">nonsense</h3>
+                        <!-- maybe find just a random image or something -->
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row colophon-section">
+                <div class="col-md-5">
+                    <!-- i want to make these icons have a border around them and add some animation to them -->
+                    <!-- don't forget to give the icon's a unique id for easy styling -->
                     <nav class="bottom-nav">
-                        <ul class="nav footer-social-list justify-content-between">
-                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg>icon-facebook</a></li>
+                        <ul class="nav footer-social-list justify-content-around">
+                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-facebook" id="footer-icon"><use xlink:href="#icon-facebook"></use></svg></a></li>
                             <!-- twitter icon... why you no work?? got it.. why was there a ,social in the class?? -->
-                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg>icon-twitter</a></li>
-                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-rss"><use xlink:href="#icon-rss"></use></svg>
-                                icon-rss</a></li>
-                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-flickr"><use xlink:href="#icon-flickr"></use></svg>
-                                icon-flickr</a></li>
-                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-linkedin2"><use xlink:href="#icon-linkedin2"></use></svg>
-                                icon-linkedin2</a></li>
-                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-flickr"><use xlink:href="#icon-flickr"></use></svg>
-                                icon-flickr</a></li>
-                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-skype"><use xlink:href="#icon-skype"></use></svg>
-                                icon-skype</a></li>
-                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-envelop"><use xlink:href="#icon-envelop"></use></svg>
-                                icon-envelop</a></li>
+                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-twitter" id="footer-icon"><use xlink:href="#icon-twitter"></use></svg></a></li>
+                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-rss" id="footer-icon"><use xlink:href="#icon-rss"></use></svg></a></li>
+                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-flickr" id="footer-icon"><use xlink:href="#icon-flickr"></use></svg></a></li>
+                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-linkedin2" id="footer-icon"><use xlink:href="#icon-linkedin2"></use></svg></a></li>
+                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-flickr" id="footer-icon"><use xlink:href="#icon-flickr"></use></svg></a></li>
+                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-skype" id="footer-icon"><use xlink:href="#icon-skype"></use></svg></a></li>
+                            <li class="nav-item footer-social-item"><a href="#link" class="footer-nav-link"><svg class="icon icon-envelop" id="footer-icon"><use xlink:href="#icon-envelop"></use></svg></a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-7">
                     <div class="colophon">
                         <p> &copy; powered by company all rights reserved</p>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     </footer>
 
 
