--- a/venedor-boot.html
+++ b/venedor-boot.html
@@ -208,8 +208,10 @@
             <div class="row justify-content-around">
                 <!-- border-0 will remove any border in bootstrap when using cards. crazy -->
                 <!-- create multiple divs for the stars?? what did lorraine do? -->
-                <div class="card col-md-3 border-0" style="width: 18rem;">
-                    <img src="media/item1-hover.jpg" class="card-img-top" alt="...">
+                <div class="card col-md-3 border-0 shopping-card" style="width: 18rem;">
+                    <img src="media/item1-hover.jpg" class="card-img-top img-fluid" alt="...">
+                    <p class="sales-tag">new</p>
+                    <p class="pricing-bubble">$24</p> <!--well that's easy enough. no problem-->
                     <!-- 4 stars; 1 empty star -->
                     <div class="card-body">
                         <svg class="icon icon-star-full"><use xlink:href="#icon-star-full"></use></svg>
@@ -221,8 +223,10 @@
                       <button class="card-button"><a href="#" class="card-button-link">add to cart</a></button>
                     </div>
                 </div>
-                <div class="card col-md-3 border-0" style="width: 18rem;">
+                <div class="card col-md-3 border-0 shopping-card" style="width: 18rem;">
                     <img src="media/item2-hover.jpg" class="card-img-top" alt="...">
+                    <p class="sales-tag">new</p>
+                    <p class="pricing-bubble">$300</p>
                     <!-- 2 stars; 3 empty stars -->
                     <div class="card-body">
                         <svg class="icon icon-star-full"><use xlink:href="#icon-star-full"></use></svg>
@@ -234,8 +238,9 @@
                     <button class="card-button"><a href="#" class="card-button-link">add to cart</a></button>
                     </div>
                 </div>
-                <div class="card col-md-3 border-0" style="width: 18rem;">
+                <div class="card col-md-3 border-0 shopping-card" style="width: 18rem;">
                     <img src="media/item3-hover.jpg" class="card-img-top" alt="...">
+                    <p class="pricing-bubble">$80</p>
                     <!-- 4.5 stars; 1 half-star -->
                     <div class="card-body">
                         <svg class="icon icon-star-full"><use xlink:href="#icon-star-full"></use></svg>
@@ -247,8 +252,10 @@
                       <button class="card-button"><a href="#" class="card-button-link">add to cart</a></button>
                     </div>
                 </div>
-                <div class="card col-md-3 border-0" style="width: 18rem;">
+                <div class="card col-md-3 border-0 shopping-card" style="width: 18rem;">
                     <img src="media/item5-hover.jpg" class="card-img-top" alt="...">
+                    <p class="sales-tag">new</p>
+                    <p class="pricing-bubble">$40</p>
                     <!-- 5 stars -->
                     <div class="card-body">
                         <svg class="icon icon-star-full"><use xlink:href="#icon-star-full"></use></svg>
@@ -285,8 +292,9 @@
                 </div>
             </div>
             <div class="row justify-content-around">
-                <div class="card col-md-3 border-0" style="width: 18rem;">
+                <div class="card col-md-3 border-0 shopping-card" style="width: 18rem;">
                     <img src="media/item3-hover.jpg" class="card-img-top" alt="...">
+                    <p class="pricing-bubble">$23</p>
                     <!-- 4.5 stars -->
                     <div class="card-body">
                         <svg class="icon icon-star-full"><use xlink:href="#icon-star-full"></use></svg>
@@ -298,8 +306,9 @@
                       <button class="card-button"><a href="#" class="card-button-link">add to cart</a></button>
                     </div>
                 </div>
-                <div class="card col-md-3 border-0" style="width: 18rem;">
+                <div class="card col-md-3 border-0 shopping-card" style="width: 18rem;">
                     <img src="media/item5-hover.jpg" class="card-img-top" alt="...">
+                    <p class="pricing-bubble">$70</p>
                     <!-- 5 stars -->
                     <div class="card-body">
                         <svg class="icon icon-star-full"><use xlink:href="#icon-star-full"></use></svg>
@@ -311,8 +320,9 @@
                       <button class="card-button"><a href="#" class="card-button-link">add to cart</a></button>
                     </div>
                 </div>
-                <div class="card col-md-3 border-0" style="width: 18rem;">
+                <div class="card col-md-3 border-0 shopping-card" style="width: 18rem;">
                     <img src="media/item7-hover.jpg" class="card-img-top" alt="...">
+                    <p class="pricing-bubble">$69</p>
                     <!-- 3.5 stars -->
                     <div class="card-body">
                         <svg class="icon icon-star-full"><use xlink:href="#icon-star-full"></use></svg>
@@ -324,8 +334,10 @@
                       <button class="card-button"><a href="#" class="card-button-link">add to cart</a></button>
                     </div>
                 </div>
-                <div class="card col-md-3 border-0" style="width: 18rem;">
+                <div class="card col-md-3 border-0 shopping-card" style="width: 18rem;">
                     <img src="media/item8-hover.jpg" class="card-img-top" alt="...">
+                    <p class="sales-tag">new</p>
+                    <p class="pricing-bubble">$50</p>
                     <!-- 5 stars -->
                     <div class="card-body">
                         <svg class="icon icon-star-full"><use xlink:href="#icon-star-full"></use></svg>
@@ -395,7 +407,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 flex-sm-column d-flex justify-content-center">
                     <div class="footer-list" id="list3">
                         <h3 class="sub-header" id="my-account">my account</h3>
                         <p class="my-account-details">It's none of your business</p>
