--- a/venedor-boot.html
+++ b/venedor-boot.html
@@ -85,60 +85,64 @@
                     <nav class="main-nav-bar">
                         <!-- 9/7 i want to nest lists within lists without having them display when i am not hovering over the item. how can i make that happen??? -->
                         <!-- 9/8 well i got the list to sort of work. i will take the small victory for now. i just need to figure out why the new pop out menu pushes the rest of the content downward. whatever -->
-                        <ul class="nav justify-content-around main-nav-list">
+                        <!-- 9/9 going to comment out the nested lists and try to use the ugly dropdowns in bootstrap -->
+                        
+                        <!-- 9/9 now i just have to figure out how to properly style these boxes. very confusing... nevermind that was easy enough.. nevermind that nevermind. see 'mood' in the footer -->
+                        <ul class="nav justify-content-between main-nav-list">
                             <li class="main-nav-bar-item" id="home">home
                                 <ul class="show-home-list">
-                                    <li class="home-list-item">home1</li>
-                                    <li class="home-list-item">home2</li>
-                                    <li class="home-list-item">home3</li>
-                                    <li class="home-list-item">home4</li>
-                                    <li class="home-list-item">home5</li>
-                                    <li class="home-list-item">home6</li>
-                                    <li class="home-list-item">home7</li>
-                                    <li class="home-list-item">home8</li>
+                                    <li class="home-list-item"><a href="#link">home</a></li>
+                                    <li class="home-list-item"><a href="#link">home</a></li>
+                                    <li class="home-list-item"><a href="#link">home</a></li>
+                                    <li class="home-list-item"><a href="#link">home</a></li>
+                                    <li class="home-list-item"><a href="#link">home</a></li>
+                                    <li class="home-list-item"><a href="#link">home</a></li>
+                                    <li class="home-list-item"><a href="#link">home</a></li>
+                                    <li class="home-list-item"><a href="#link">home</a></li>
                                 </ul>
                             </li>
                             <li class="main-nav-bar-item" id="shop">shop
                                 <ul class="show-shop-list">
-                                    <li class="shop-list-item">blah1</li>
-                                    <li class="shop-list-item">blah2</li>
-                                    <li class="shop-list-item">blah3</li>
-                                    <li class="shop-list-item">blah4</li>
+                                    <li class="shop-list-item"><a href="#link">Clothing</a></li>
+                                    <li class="shop-list-item"><a href="#link">Shoes</a></li>
+                                    <li class="shop-list-item"><a href="#link">Accessories</a></li>
+                                    <li class="shop-list-item"><a href="#link">Sports</a></li>
+                                    <li class="shop-list-item"><a href="#link">Maternity</a></li>
                                 </ul>
                             </li>
                             <li class="main-nav-bar-item" id="pages">pages
                                 <ul class="show-pages-list">
-                                    <li class="page-list-item">headers</li>
-                                    <li class="page-list-item">footers</li>
-                                    <li class="page-list-item">products</li>
-                                    <li class="page-list-item">cart</li>
-                                    <li class="page-list-item">category</li>
-                                    <li class="page-list-item">blog</li>
-                                    <li class="page-list-item">checkout</li>
-                                    <li class="page-list-item">about us</li>
+                                    <li class="page-list-item"><a href="#link">headers</a></li>
+                                    <li class="page-list-item"><a href="#link">footers</a></li>
+                                    <li class="page-list-item"><a href="#link">products</a></li>
+                                    <li class="page-list-item"><a href="#link">cart</a></li>
+                                    <li class="page-list-item"><a href="#link">category</a></li>
+                                    <li class="page-list-item"><a href="#link">blog</a></li>
+                                    <li class="page-list-item"><a href="#link">checkout</a></li>
+                                    <li class="page-list-item"><a href="#link">about us</a></li>
                                 </ul>
                             </li>
                             <li class="main-nav-bar-item" id="portfolio">portfolio
                                 <ul class="show-portfolio-list">
-                                    <li class="portfolio-list-item">classic</li>
-                                    <li class="portfolio-list-item">masonry</li>
-                                    <li class="portfolio-list-item">portfolio posts</li>
+                                    <li class="portfolio-list-item"><a href="#link">classic</a></li>
+                                    <li class="portfolio-list-item"><a href="#link">masonry</a></li>
+                                    <li class="portfolio-list-item"><a href="#link">portfolio posts</a></li>
                                 </ul>
                             </li>
                             <li class="main-nav-bar-item" id="elements">elements
                                 <ul class="show-elements-list">
-                                    <li class="elements-list-item">tabs</li>
-                                    <li class="elements-list-item">titles</li>
-                                    <li class="elements-list-item">typography</li>
-                                    <li class="elements-list-item">collapses</li>
-                                    <li class="elements-list-item">animations</li>
-                                    <li class="elements-list-item">grid system</li>
-                                    <li class="elements-list-item">alert boxes</li>
-                                    <li class="elements-list-item">buttons</li>
-                                    <li class="elements-list-item">media</li>
-                                    <li class="elements-list-item">forms</li>
-                                    <li class="elements-list-item">icons</li>
-                                    <li class="elements-list-item">lists</li>
+                                    <li class="elements-list-item"><a href="#link">tabs</a></li>
+                                    <li class="elements-list-item"><a href="#link">titles</a></li>
+                                    <li class="elements-list-item"><a href="#link">typography</a></li>
+                                    <li class="elements-list-item"><a href="#link">collapses</a></li>
+                                    <li class="elements-list-item"><a href="#link">animations</a></li>
+                                    <li class="elements-list-item"><a href="#link">grid system</a></li>
+                                    <li class="elements-list-item"><a href="#link">alert boxes</a></li>
+                                    <li class="elements-list-item"><a href="#link">buttons</a></li>
+                                    <li class="elements-list-item"><a href="#link">media</a></li>
+                                    <li class="elements-list-item"><a href="#link">forms</a></li>
+                                    <li class="elements-list-item"><a href="#link">icons</a></li>
+                                    <li class="elements-list-item"><a href="#link">lists</a></li>
                                 </ul>
                             </li>
                             <li class="main-nav-bar-item">contact us</li>
